--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,4 @@ playground.xcworkspace
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
 
-SwiftTracer/resources
+SwiftTracer/assets
