--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
@@ -31,9 +31,9 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
@@ -58,7 +58,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--spp 8"
+            argument = "--spp 10"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
