--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,15 +31,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Generate Docs
-        run: ./gendoc.sh
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Swift DocC Action
+        # You may pin to the exact commit or the version.
+        # uses: fwcd/swift-docc-action@3c0d98e9eb344aa66952020b4cecda0eb8b69858
+        uses: fwcd/swift-docc-action@v1.0.2
         with:
-          # Upload docs
-          path: 'docs'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          # The target to document.
+          target: SwiftTracer
+          # The output folder.
+          output: docs
+          # The path at which the docs will be hosted.
+          hosting-base-path: SwiftTracer
+          # Whether to disable indexing.
+          disable-indexing: true
+          # Whether to generate documentation suitable for static hosting (e.g. on GitHub Pages).
+          transform-for-static-hosting: true
