WIP Start adding parallel chains to see if it will fix the black image problem

--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
@@ -54,7 +54,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "assets/blend.json"
+            argument = "assets/cornelBox.json"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
