--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
@@ -32,8 +32,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
@@ -54,7 +54,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "assets/cornelBoxPssmlt.json"
+            argument = "assets/cornelBox.json"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
