--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
@@ -53,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "out-diffuse.png"
+            argument = "out.png"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
