Adds better scripts architecture, mse and psnr

--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
@@ -53,7 +53,19 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "out.png"
+            argument = "mse"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--output /Users/fbp/Code"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--inputs /Users/fbp/Code/ref.png"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--inputs  /Users/fbp/Code/out.png"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
