Update replay sampler, fix a few issues with gdpt, gdmlt

--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
@@ -65,7 +65,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--inputs  /Users/fbp/Code/out.png"
+            argument = "--inputs  /Users/fbp/Documents/out.png"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
