Add assets for doorajar scene, fix image not loading jpg correctly, make sure pssmlt discards invalid seeds

--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
@@ -54,7 +54,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "assets/cornelBoxPssmlt.json"
+            argument = "assets/doorajar.json"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
