Update convergence integrator to take gradients into account

--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
@@ -58,14 +58,14 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--output out.pfm"
+            argument = "--output out.exr"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = ""
-            value = ""
+            key = "CGBITMAP_CONTEXT_LOG_ERRORS"
+            value = "1"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
