--- a/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
+++ b/SwiftTracer.xcodeproj/xcshareddata/xcschemes/scripts.xcscheme
@@ -53,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "mse"
+            argument = "gradient"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -66,7 +66,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--inputs  /Users/fbp/Documents/out.png"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
