Add bidir scene, bvh updates, integrators updates

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ playground.xcworkspace
 SwiftTracer/assets
 histogram/assets
 Scripts/assets
+SwiftTracer.xcodeproj/xcshareddata/xcschemes/SwiftTracer.xcscheme
